vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_lambda.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_lambda.vv:2:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     '' == f(|| $embed_file(@FILE).path)
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    3 | }
