vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_lambda.vv
fn main() {
	'' == f(|| $embed_file(@FILE).path)
}
